--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div style="clear: both"></div>
-                    <input type="text" id="review_text" class="modal-review-input" placeholder="댓글을 남겨보세요!">
+                    <input type="text" id="review_text" class="modal-review-input" placeholder="댓글을 남겨보세요!  로그인은 필수겠죠?">
                     <button id="send_review" onclick="send_review()">작성</button>
                 </div>
             </div>
