--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -53,9 +53,10 @@
                 <a href="/">모두의 책 리뷰</a>
             </div>
             <div class="main_page">
-                    <a class="bestS" href="/bestSeller">베스트셀러</a>
-                    <a class="prefer" href="/">추천리스트</a>
-                </div>
+                <a class="bestS" href="/bestSeller">베스트셀러</a>
+                <a class="dp_none" href=""></a>
+                <a class="prefer" href="/">추천리스트</a>
+            </div>
             <div class="main_menu">
                 <a class="login_no" href="/login">로그인</a>
                 <a class="login_yes" href="javascript:void(0)" id="login_id">{{ user_id }}<span>님 환영합니다.</span></a>
@@ -99,7 +100,7 @@
                 </div>
             </div>
             <div class="modal-float">
-                <div class="modal-review-container"  >
+                <div class="modal-review-container">
                     <div id="modal-reviews">
                         <div class="modal-review-textbox">
                             <td>유저이름</td>
