--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,7 @@
             </div>
             <div class="main_page">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
+                <a class="dp_none" href=""></a>
                 <a class="prefer" href="/">추천리스트</a>
             </div>
             <div class="main_menu">
