--- a/templates/joinMem.html
+++ b/templates/joinMem.html
@@ -51,6 +51,7 @@
 
             <div class="main_page">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
+                <a class="dp_none" href=""></a>
                 <a class="prefer" href="/">추천리스트</a>
             </div>
 
@@ -62,7 +63,7 @@
     </div>
 
     <div class="join-form">
-        <p class="title">모두의 책 리뷰에 오신 것을 환영합니다.</p>
+        <p class="title">모두의 책 리뷰에 오신 것을 환영합니다</p>
         <div id="id">
             <input type="text" placeholder="아이디를 입력해주세요." id="user_id" autocomplete="off"/>
         </div>
