--- a/templates/index.html
+++ b/templates/index.html
@@ -130,10 +130,13 @@
                 <div class="modal-review-container">
                     <div id="modal-reviews">
                         <div>
-                            <p id="review_title">제목</p>
+                            <h2 class="modal-userreivew-title">제목 :
+                                <span id="review_title">제목</span>
+                            </h2>
+{#                                <p id="review_title">제목</p>#}
                         </div>
                         <div>
-                            <p id="review_content">내용</p>
+                            <p class="modal-userreivew-content" id="review_content">내용</p>
                         </div>
                     </div>
                 </div>
