출판사, 출간일 삭제

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,8 +113,8 @@
                         <img id="modal_img_url" class="modal-image" src="">
                         <div class="modal-bookinfo">
                             <p id="modal_author" class="modal-text-margin">저자</p>
-                            <p id="modal_publisher" class="modal-text-margin">출판사</p>
-                            <p id="modal_publishdate" class="modal-text-margin">출간일</p>
+{#                            <p id="modal_publisher" class="modal-text-margin">출판사</p>#}
+{#                            <p id="modal_publishdate" class="modal-text-margin">출간일</p>#}
                         </div>
                     </div>
                 </div>
