이미지 추가 / ui 조금꾸미기

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -44,6 +44,8 @@ p {
     position: relative;
 }
 
+
+
 /* nav-bar */
 .nav-bar {
     width: 100%;
@@ -52,7 +54,26 @@ p {
     z-index: 5;
     top: 0;
     left: 0;
-    background-color: #eeeeee;
+    background: linear-gradient(to right, white 0%, #eee 50%, white 100%);
+}
+
+.nav-bar .center .logo_img1 img {
+    height: 140px;
+    position: absolute;
+    left: 0;
+    right: 400px;
+    opacity: .7;
+    margin:auto;
+}
+
+.nav-bar .center .logo_img2 img {
+    height: 140px;
+    position: absolute;
+    left: 420px;
+    right: 0;
+    opacity: .4;
+    margin:auto;
+    transform: scale(1.5);
 }
 
 .nav-bar .center .mainPage > img {
