--- a/templates/index.html
+++ b/templates/index.html
@@ -37,12 +37,12 @@
           rel="stylesheet"/>
 
     {#  favicon  #}
-    <link rel="icon" href="../static/image/book_logo.png"/>
+    <link rel="icon" href="../static/image/favicon4.png"/>
 
     {#  material-icons  #}
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 
-    <title>책리뷰</title>
+    <title>모두의 책 리뷰</title>
 </head>
 <body>
 <div class="wrap">
@@ -53,6 +53,12 @@
             <div class="title">
                 <a href="/">모두의 책 리뷰</a>
             </div>
+            <a class="logo_img1" href="/">
+                <img src="../static/image/logo3.png" alt="로고이미지"/>
+            </a>
+            <a class="logo_img2" href="/">
+                <img src="../static/image/logo2.png" alt="로고이미지"/>
+            </a>
             <div class="main_page">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
                 <a class="dp_none" href=""></a>
