--- a/templates/bestSeller.html
+++ b/templates/bestSeller.html
@@ -37,7 +37,7 @@
           rel="stylesheet"/>
 
     {#  favicon  #}
-    <link rel="icon" href="../static/image/book_logo.png"/>
+    <link rel="icon" href="../static/image/favicon4.png"/>
 
     {#  material-icons  #}
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
@@ -52,11 +52,20 @@
             <div class="title">
                 <a href="/">모두의 책 리뷰</a>
             </div>
+
+            <a class="logo_img1" href="/">
+                <img src="../static/image/logo3.png" alt="로고이미지"/>
+            </a>
+            <a class="logo_img2" href="/">
+                <img src="../static/image/logo2.png" alt="로고이미지"/>
+            </a>
+
             <div class="main_page">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
                 <a class="dp_none" href=""></a>
                 <a class="prefer" href="/">추천리스트</a>
             </div>
+
             <div class="main_menu">
                 <a class="login_no" href="/login">로그인</a>
                 <a class="login_yes" href="javascript:void(0)" id="login_id">{{ user_id }}<span>님 환영합니다.</span></a>
