--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@
           rel="stylesheet"/>
 
     {#  favicon  #}
-    <link rel="icon" href="../static/image/book_logo.png"/>
+    <link rel="icon" href="../static/image/favicon4.png"/>
 
     <title>모두의 책 리뷰</title>
 </head>
@@ -48,6 +48,13 @@
             <div class="title">
                 <a href="/">모두의 책 리뷰</a>
             </div>
+
+            <a class="logo_img1" href="/">
+                <img src="../static/image/logo3.png" alt="로고이미지"/>
+            </a>
+            <a class="logo_img2" href="/">
+                <img src="../static/image/logo2.png" alt="로고이미지"/>
+            </a>
 
             <div class="main_page">
                 <a class="bestS" href="/bestSeller">베스트셀러</a>
