--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,20 +5,6 @@ body {
     margin: auto;
 }
 
-/*body::before {*/
-/*    content: '';*/
-/*    background-image: url("../image/bgimg3.jpg");*/
-/*    background-repeat: repeat;*/
-/*    background-attachment: scroll;*/
-/*    background-size: cover;*/
-/*    opacity: 1;*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    bottom: 0;*/
-/*    right: 0;*/
-/*}*/
-
 .wrap {
     width: 1000px;
     margin: auto;
@@ -68,6 +54,20 @@ input, button, textarea {
     opacity: 1 !important;
 }
 
+.swal-overlay {
+    background-color: rgba(43, 165, 137, 0.45);
+}
+
+.swal-modal {
+  background-color: rgba(63,255,106,0.8);
+  border: 3px solid white;
+}
+
+.swal-title {
+  font-size: 22px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.21);
+  margin: 0 0 28px 0;
+}
 
 
 /* nav-bar */
