--- a/templates/joinMem.html
+++ b/templates/joinMem.html
@@ -19,6 +19,10 @@
           integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
+    {#  SweetAlert  #}
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+{#    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>#}
+
     <!--  jquery  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
             integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
@@ -26,6 +30,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <!--  css & js -->
+    <link rel="stylesheet" href="../static/css/alert.css"/>
     <link rel="stylesheet" href="../static/css/joinMem.css"/>
     <script defer src="../static/js/joinMem.js"></script>
 
