--- a/templates/joinMem.html
+++ b/templates/joinMem.html
@@ -76,6 +76,7 @@
 
     <div class="join-form">
         <p class="title">모두의 책 리뷰에 오신 것을 환영합니다</p>
+        <img src="../static/image/favicon4.png" alt="이미지"/>
         <div id="id">
             <input type="text" placeholder="아이디를 입력해주세요." id="user_id" autocomplete="off"/>
         </div>
