--- a/static/css/login.css
+++ b/static/css/login.css
@@ -182,6 +182,16 @@ p {
     margin:auto;
 }
 
+.login-form > img {
+    height: 99px;
+    position: absolute;
+    top:0;
+    right:0;
+    left:0;
+    margin:auto;
+    opacity: .2;
+}
+
 .login-form > p {
     display: block;
     text-align: center;
