--- a/templates/login.html
+++ b/templates/login.html
@@ -75,6 +75,7 @@
     <!-- login -->
     <div class="login-form">
         <p>모두의 책 리뷰에 오신 것을 환영합니다</p>
+        <img src="../static/image/favicon4.png" alt="이미지"/>
         <div id="id">
             <input type="text" placeholder="아이디를 입력해주세요."/>
         </div>
