--- a/static/css/login.css
+++ b/static/css/login.css
@@ -44,6 +44,20 @@ p {
     position: relative;
 }
 
+.swal-overlay {
+    background-color: rgba(43, 165, 137, 0.45);
+}
+
+.swal-modal {
+  background-color: rgba(63,255,106,0.8);
+  border: 3px solid white;
+}
+
+.swal-title {
+  font-size: 22px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.21);
+  margin: 0 0 28px 0;
+}
 
 
 /* nav-bar */
@@ -252,4 +266,4 @@ p {
     border-right:0;
 
 }
-/**/
+
