--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <!--  css & js -->
-    <link rel="stylesheet" href="../static/css/alert.css"/>
     <link rel="stylesheet" href="../static/css/main.css"/>
 
     <script defer src="../static/js/main.js"></script>
@@ -53,7 +52,6 @@
 
     <div class="nav-bar">
         <div class="center">
-
             <div class="title">
                 <a href="/">모두의 책 리뷰</a>
             </div>
@@ -90,7 +88,7 @@
 
 
     <div class="book-review">
-        <div class="book-review-info">회원님들께서 직접 추천해주시는 책들입니다.<br>책에 대한 자세한 정보가 궁금하시다면 클릭!</div>
+        <div class="book-review-info">회원님들께서 직접 추천해주시는 책들입니다.<br>추천해주신 이유가 궁금하시다면 클릭!</div>
         <div class="book-review-contents">
 
             {% for row in rows %}
@@ -123,8 +121,8 @@
                         <img id="modal_img_url" class="modal-image" src="">
                         <div class="modal-bookinfo">
                             <p id="modal_author" class="modal-text-margin">저자</p>
-{#                            <p id="modal_publisher" class="modal-text-margin">출판사</p>#}
-{#                            <p id="modal_publishdate" class="modal-text-margin">출간일</p>#}
+                            {#                            <p id="modal_publisher" class="modal-text-margin">출판사</p>#}
+                            {#                            <p id="modal_publishdate" class="modal-text-margin">출간일</p>#}
                         </div>
                     </div>
                 </div>
@@ -140,10 +138,10 @@
                 <div class="modal-review-container">
                     <div id="modal-reviews">
                         <div>
-                            <h2 class="modal-userreivew-title">제목 :
+                            <h2 class="modal-userreivew-title">
                                 <span id="review_title">제목</span>
                             </h2>
-{#                                <p id="review_title">제목</p>#}
+                            {#                                <p id="review_title">제목</p>#}
                         </div>
                         <div>
                             <p class="modal-userreivew-content" id="review_content">내용</p>
