--- a/templates/joinMem.html
+++ b/templates/joinMem.html
@@ -21,13 +21,17 @@
 
     {#  SweetAlert  #}
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-{#    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>#}
 
     <!--  jquery  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
             integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+    {#  aos li  #}
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!--  css & js -->
     <link rel="stylesheet" href="../static/css/joinMem.css"/>
@@ -73,7 +77,7 @@
         </div>
     </div>
 
-    <div class="join-form">
+    <div class="join-form" data-aos="zoom-in" data-aos-duration="2000">
         <p class="title">모두의 책 리뷰에 오신 것을 환영합니다</p>
         <div id="id">
             <input type="text" placeholder="아이디를 입력해주세요." id="user_id" autocomplete="off"/>
@@ -88,8 +92,6 @@
         </div>
         <p id="wrongPw"></p>
         <button id="join">회원가입</button>
-
-        <hr>
     </div>
 
 </body>
