--- a/templates/login.html
+++ b/templates/login.html
@@ -28,11 +28,6 @@
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
-    {#  aos li  #}
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
     <!--  css & js -->
     <link rel="stylesheet" href="../static/css/login.css"/>
     <script defer src="../static/js/login.js"></script>
@@ -78,7 +73,7 @@
     </div>
 
     <!-- login -->
-    <div class="login-form" data-aos="zoom-in" data-aos-duration="2000">
+    <div class="login-form">
         <p>모두의 책 리뷰에 오신 것을 환영합니다</p>
         <div id="id">
             <input type="text" placeholder="아이디를 입력해주세요."/>
