--- a/static/css/main.css
+++ b/static/css/main.css
@@ -705,12 +705,14 @@ input, button, textarea {
     text-align: center;
     font-size: 30px;
     margin-top: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #888;
 }
 
 .modal-userreivew-content{
     text-align: center;
     font-size: 20px;
+    margin-top: 20px;
     margin-bottom: 20px;
     line-height:140%;
 }
